+ Theme
+ Utils
$ Apply label to window makes an unknow crash

## Version 2: 24/04/17 ##
+ Grid working

## Version 3: 24/04/17 ##
+ Cell light color

## Version 4: 25/04/17 ##
* Font fix
$ Memomry (deleting buttons - check issues)

## Version 5: 25/04/17 ##
* Memory cleaning fix

## Version 6: 25/04/17 ##
* Button update fix
* Output added

## Version 7: 25/04/17 ##
* Button class ready for the actions
* Cleaned the entiere code
* Commented the entiere code
* Fixed warnings

## Version 8: 25/04/17 ##
* Label added in the Theme
+ Background methods added
* Theme improved (label placement & appareance)

## Version 9 : 05/05/17 ##
* Button's constructor now takes its label
* New font fix (it was a pointer / reference problem)
* Changed ressources to resources

## Version 10 : 05/05/17 ##
+ loadLevel : it loads a level from a file 
	- it doesn't cause a crash if the level does not exist)
	- it overrides the precedent level if there was one
	- levels ready for next updates
* Fixed grid conception problems (some crashes)

## Version 11 : 09/05/17 ##
+ saveLevel()  
+ level selection working

## Version 12 : 10/05/17 ##
* Changed level id from int to string (problem 00 != 0)
* Fixed showGrid algorithm
* Fixed memory loose

## Version 13 : ../../.. ##
* Fixed labels (bob fix)
+ Added an attribute for the mouse status : m_pressing_mouse (application.h)
+ Constructor by copy for button to move it: draw_button_at(..)
+ Rectangle moving
                  

#TODO:
(code ready in grid.cpp)
* If the file loads properly, check if the values are okay:
- correct fields (4 fields with 1 in the header..)
- pos x & y not too big
- light >1 show warning in console
- height >=0
* Method in interface that is called only on changing game state ( inits things -> remove m_frist_loop)
* Catch / exceptions handler when a line of a level is fuckedup
* GAP of the grid: drawGrid() should be customizable -> drawGrid(gap)
* FR TO ENGLISH IN APPLICATION;H
* Changer l'algo oNCell()